<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_thin"
        android:text="Reset Password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineResetLeft"/>

    <TextView
        android:id="@+id/tvResetPasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/we_will_send_you_the_password_reset_link_to_your_email"
        android:textColor="@color/g_blue400"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassword" />

    <EditText
        android:id="@+id/edResetPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/boxHeight"
        android:layout_marginTop="14dp"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/box_background"
        app:layout_constraintEnd_toEndOf="@id/guidelineResetRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineResetLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPasswordText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineResetLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineResetRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/linearLayoutResetHeight"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineResetLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineResetRight"
        app:layout_constraintTop_toBottomOf="@+id/edResetPassword">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/smallButtonHeight"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/white_background"
            android:text="@string/cancel"
            android:textAllCaps="false" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/smallButtonHeight"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/blue_background"
            android:text="@string/send"
            android:textAllCaps="false" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>